# my-client

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml  hackernewAPI.md  package-lock.json  test.http
.lingma/rules/: rules.md
hackernews/: Cargo.toml  Dioxus.toml  output.css  package-lock.json  package.json
hackernews/html/: comments.html  index.html  main.html  send.html  story_item.html
hackernews/src/: api.rs  lib.rs  main.rs
hackernews/src/ui/: comments.rs  mod.rs  stories.rs  story_comment.rs  story_item.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commends/: mod.rs
