[package]
name = "hackernews"
version = "0.1.0"
authors = ["Yince-Boulevard <yince_boulevard@petalmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.6", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
