[package]
name = "hackernews"
version = "0.1.0"
authors = ["Yince-Boulevard <yince_boulevard@petalmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }

dioxus = { version = "0.6.3", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
