[package]
name = "hn"
version = "0.1.0"
description = "Hackernews tauri APPw"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hackernews_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = { version = "2.7.1", features = ["colored"] }
tauri-plugin-window-state = "2.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
tauri-plugin-clipboard-manager = "2.3.2"
tracing = { version = "0.1.41", features = ["log"] }
dirs = "6.0.0"
